--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "C:\\Program Files\\Python37\\python.exe"
+    "python.pythonPath": "C:\\Users\\Jordan\\AppData\\Local\\Programs\\Python\\Python37-32\\python.exe"
 }
