--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,6 @@ Homestead.yaml
 npm-debug.log
 yarn-error.log
 /scripts/__pycache__
-.vscode/settings.json
-.vscode/settings.json
 /resources/views/compiled
-scripts/plans.csv
-.vscode/settings.json
+/scripts/plans.csv
+/.vscode/settings.json
